# propro

./: .gitignore  README.md  SKILL.md  pyproject.toml  requirements.txt
bench tools/: README.md
bench tools/reports/: README.md  sequence_overview_pdf.py  test_sequence_overview_pdf.py
examples/: quick_overview_example.py
propro/: __init__.py
propro/core/: __init__.py  properties.py  report.py  sequence.py  visualize.py
propro/interfaces/: __init__.py
propro/interfaces/excel/: REGISTRY.md  __init__.py
propro/interfaces/gscripts/: REGISTRY.md  __init__.py
propro/interfaces/pdf_reports/: README.md  __init__.py  sequence_overview_pdf.py
propro/interfaces/pymol/: __init__.py
propro/motifs/: __init__.py
propro/motifs/nanobodies/: __init__.py
propro/motifs/nanobodies/excel/: README.md  cdr_annotation.bas
propro/motifs/nanobodies/gscripts/: README.md  cdr_annotation.gs
tests/: conftest.py  test_properties.py  test_report.py  test_sequence.py  test_sequence_overview_pdf.py  test_visualize.py
