[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "propro"
version = "0.1.0"
description = "Quick calculation and visualization of biochemical/biophysical protein properties."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "biopython>=1.81",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pypdf>=3.0"]

[tool.setuptools.packages.find]
include = ["propro*"]
